# advent-of-code-2023

./: .gitignore  .gitmodules  README.md  add_video.sh  docker-compose.yaml  docker-swarm.yaml  empty_media.sh  empty_workdir.sh  encode_static.sh  encode_tests.sh  graph_package_temp.sh  graph_proc_frequency.sh  index.html  mount_workdir.sh  process.sh  stop_encodes.sh
citations/: README.md
citations/day_01/: README.md
crt/: Dockerfile  run_ffmpeg.py
download/: Dockerfile  download_video.py
haproxy/: Dockerfile  haproxy.cfg
hello/: Cargo.toml  README.md
hello/src/: lib.rs
kubernetes/apache/: deployment.yaml  service.yaml
kubernetes/crt/: daemonset.yaml  deployment.yaml  hpa.yaml  rbac.yaml
kubernetes/download/: deployment.yaml
kubernetes/haproxy/: deployment.yaml  service.yaml
nextjs/: .eslintrc.cjs  Dockerfile  next.config.mjs  package-lock.json  package.json
nextjs/src/: env.mjs
nginx/: Dockerfile  default.conf
orchestration/: add_to_queue.py  watch_for_process_requets.py
postgres/: init.sql
python/: day_01.py
rust/: Cargo.toml  LICENSE_MIT
rust/src/: lib.rs
rust/src/solutions/: day_00.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_XX.rs  mod.rs  workerHelpers.js
rust/src/solutions/input/: day_01_part_2_test_input.txt  day_01_test_input.txt
serve/: Dockerfile  flask_server.py
ssl_terminator/: .gitignore  Dockerfile  docker-compose.yaml  haproxy.cfg
video-stream/: docker-compose.yaml
web/: Dockerfile  next.config.mjs  package-lock.json  package.json
(+46 files in other folders)
