[package]
name = "television"
version = "0.1.0"
authors = ["Frank Hereford <frank@frankhereford.com>"]
edition = "2018"
description = "Advent of Code for 2023"
repository = "https://github.com/frankhereford/advent-of-code-2023"
license = "Unlicense"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
chrono = "0.4"
web-sys = { version = "0.3", features = ['console'] }
regex = "1"
serde = "1.0.193"
serde_json = "1.0.108"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
